fix picture not really visible

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -18,6 +18,7 @@
   border-radius: 40px;
   margin: 1em auto 0.5em;
   display: block; // to trigger alignment
+  border: thin solid rgba(0, 0, 0, .1);
 }
 
 .sidebar__username {
